--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,25 @@
 name: Main
-on:
-   push:
-     branches:
-     - main
-     - production
-   pull_request:
-      branches:
-      - main
-      - production
-   workflow_dispatch:
+on: 
+  push: 
+    branches:
+    - main
+    - production
+  pull_request:
+    branches:
+    - main
+    - production
+  workflow_dispatch:
 jobs:
-  web-deply:
+  web-deploy:
     name: Wdrażanie
     runs-on: ubuntu-latest
     steps:
     - name: Akcja Github
-      uses: action/checkout@v3
+      uses: actions/checkout@v3
 
-    - name: Synchro plików
+    - name: Synchronizacja plików
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-       server: 13.82.121.254
-       username: ${{secrets.ftp_username}}
-       password: ${{secrets.ftp_password}}
+      with: 
+        server: 13.82.121.254
+        username: ${{secrets.ftp_username}}
+        password: ${{secrets.ftp_password}}
